# SFMLRefactoring

./: .gitignore  Jogo.sln  README.md
Jogo/: AreiaDasAlmas.cpp  AreiaDasAlmas.h  Barra.cpp  Barra.h  BarraVida.cpp  BarraVida.h  Bloco.cpp  Bloco.h  BolaFogo.cpp  BolaFogo.h  Botao.cpp  Botao.h  BotaoPadrao.cpp  BotaoPadrao.h  BotaoSair.cpp  BotaoSair.h  Bruxa.cpp  Bruxa.h  BuilderBotao.cpp  BuilderBotao.h  CMakeLists.txt  Cactus.cpp  Cactus.h  CaixaPause.cpp  CaixaPause.h  Cobra.cpp  Cobra.h  ComponenteMovimento.cpp  ComponenteMovimento.h  CowGirl.cpp  CowGirl.h  Cowboy.cpp  Cowboy.h  Cowboy2.cpp  Cowboy2.h  Dragao.cpp  Dragao.h  Ente.cpp  Ente.h  Entidade.cpp  (+87 more)
Jogo/Recursos/dados/: fase_salva.txt  inimigos_salvos.txt  jogadores_salvos.txt  pontuacao - Copia.txt  pontuacao.txt  projeteis_salvos.txt
Jogo/Recursos/mapas/: ninho_dragao.txt  velho_oeste.txt
Jogo/Recursos/src/: velho_oeste.txt
Jogo/assets/dados/: pontuacao.txt  projeteis_salvos.txt
Jogo/include/Core/: GeradorProjeteis.h  GerenciadorBotoes.h  GerenciadorColisoes.h  GerenciadorJogoSalvo.h
Jogo/include/Entities/: AreiaDasAlmas.h  BarraVida.h  BolaFogo.h  Bruxa.h  Cactus.h  CaixaPause.h  Cobra.h  CowGirl.h  Cowboy.h  Dragao.h  Ente.h  Espinho.h  Inimigo.h  Inimigo2.h  Morcego.h  Obstaculo.h  Personagem.h  Projetil.h  Shuriken.h
Jogo/include/Levels/: Mapa.h
Jogo/include/States/: Fase.h  Menu.h  MenuEscolhaFases.h  MenuPrincipal.h  MenuQtdJogadores.h  TocaDisco.h
Jogo/include/UI/: BotaoPadrao.h  BuilderBotao.h  Tela.h  TelaAdicionarPontuacao.h  TelaPontuacao.h
Jogo/src/: main.cpp
(+113 files in other folders)
